# embed-resource

./: CMakeLists.txt  README.md  embedresource.cpp
